Updated java up to 18